Remove user model and add profile model + fix mediafiles

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -35,15 +35,15 @@
                     x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
                     x-transition:enter-end="opacity-100 translate-y-0 scale-100">
                         <ul class="hoverlist [&>li>a]:justify-end">
-                            {% comment %} <li><a href="{% url 'profile' %}">My Profile</a></li>
+                            <li><a href="{% url 'profile' %}">My Profile</a></li>
                             <li><a href="{% url 'profile-edit' %}">Edit Profile</a></li>
-                            <li><a href="{% url 'account_logout' %}">Log Out</a></li> {% endcomment %}
+                            <li><a href="{% url 'account_logout' %}">Log Out</a></li>
                         </ul>
                     </div>
                 </li>
             {% else %}
-                {% comment %} <li><a href="{% url 'account_login' %}">Login</a></li>
-                <li><a href="{% url 'account_signup' %}">Sign Up</a></li> {% endcomment %}
+                <li><a href="{% url 'account_login' %}">Login</a></li>
+                <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
             {% endif %}
         </ul>
     </nav>
