ADD django autocomplete on add media form for artist incl creting a new artist when not in teh list

--- a/templates/a_collections/media_create.html
+++ b/templates/a_collections/media_create.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/b.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -17,5 +18,9 @@
         <a class="button secondaryAction ml-1" href="{{ request.META.HTTP_REFERER }}">Cancel</a>
     </form>
 </div>
+
+<script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+
+{{ form.media }}
 
 {% endblock %}
