--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -22,6 +22,7 @@
         <ul class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0">
             {% if user.is_authenticated %}
                 <li><a href="/">Home</a></li>
+                <li><a href="{% url 'download-csv' %}">CSV</a></li>
                 <li><a href="{% url 'artist-create' %}">Create Artist</a></li>
                 <li><a href="{% url 'media-create' %}">Create Media</a></li>
                 {% comment %} <li><a href="{% url 'inbox' %}">Inbox</a></li>  {% endcomment %}
