--- a/templates/a_collections/artist_create.html
+++ b/templates/a_collections/artist_create.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>Create Artist</h1>
-<div class="card !p-8">
+{% comment %} <div class="card !p-8">
     
     <div class="flex items-center mb-6">
         <img class="h-5 object-cover mr-1" src="https://img.icons8.com/small/96/333333/search--v1.png"/>
@@ -16,6 +16,34 @@
         <button type="submit" class="mt-1">Submit Artist</button>
         <a class="button secondaryAction ml-1" href="{{ request.META.HTTP_REFERER }}">Cancel</a>
     </form>
-</div>
 
+</div> {% endcomment %}
+
+<div class="card !p-8">
+    <h1>Search Artist</h1>
+    <form method="get" action="{% url 'search_artist' %}">
+        <label for="artist_name">Artist Name:</label>
+        <input type="text" name="artist_name" id="artist_name">
+        <button type="submit">Search</button>
+    </form>
+
+    {{results}}
+    {% if results %}
+    <h2>Search Results:</h2>
+    <ul>
+        {% for result in results %}
+        <li>{{result.ext_score}} | {{ result.name }} - {{result.type}} - {{result.country}} - {{result.gender}}
+            <form method="post" action="{% url 'add_artist' %}">
+                {% csrf_token %}
+                <input type="hidden" name="id" value="{{ result.id }}">
+                <input type="hidden" name="name" value="{{ result.name }}">
+                <input type="hidden" name="type" value="{{ result.type }}">
+                <input type="hidden" name="ext_score" value="{{ result.ext_score }}">
+                <button type="submit">Add</button>
+            </form>
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+</div>
 {% endblock %}
