ADD release list and extend cover art model with musicbrainz id and size and type field

--- a/templates/a_collections/artist_create.html
+++ b/templates/a_collections/artist_create.html
@@ -27,7 +27,7 @@
         <button type="submit">Search</button>
     </form>
 
-    {{results}}
+    {% comment %} {{results}} {% endcomment %}
     {% if results %}
     <h2>Search Results:</h2>
     <ul>
