--- a/templates/a_collections/release_list.html
+++ b/templates/a_collections/release_list.html
@@ -4,16 +4,6 @@
 {% block content %}
 
 <div class="card !p-8">
-    <h1>Search Album</h1>
-    <form method="get" action="{% url 'search_release' %}">
-        <label for="artist_name">Artist Name:</label>
-        <input type="text" name="artist_name" id="artist_name">
-        <br>
-        <label for="album_name">Album Name:</label>
-        <input type="text" name="album_name" id="album_name">
-        <br>
-        <button type="submit">Search</button>
-    </form>
 
     {% comment %} {{results}} {% endcomment %}
     {% if results %}
@@ -58,17 +48,18 @@
             <td>{{ result.type }}</td>
             <td>{{ result.status }}</td>
             <td>
-              <form method="post" action="{% url 'add_artist' %}">
+                Detail...
+                <button type="submit">Detail</button>
+
+              {% comment %} <form method="post" action="{% url 'add_artist' %}">
                 {% csrf_token %}
                 <input type="hidden" name="ext_score" value="{{ result.ext_score }}">
-                <input type="hidden" name="result.cover_art_images" value="{{ result.cover_art_images}}">
                 <input type="hidden" name="release_id" value="{{ result.release_id }}">
                 <input type="hidden" name="release_name" value="{{ result.name }}">
                 <input type="hidden" name="artist_id" value="{{ result.artist_id }}">
                 <input type="hidden" name="artist_name" value="{{ result.artist }}">
                 <input type="hidden" name="format" value="{{ result.format }}">
-                <input type="hidden" name="date" value="{{ result.date }}">
-                <input type="hidden" name="cd_tracks" value="{{ result.cd_tracks }}">
+                <input type="hidden" name="result.cd_tracks" value="{{ result.cd_tracks }}">
                 <input type="hidden" name="dvd_tracks" value="{{ result.dvd_tracks }}">
                 <input type="hidden" name="type" value="{{ result.type }}">
                 <input type="hidden" name="barcode" value="{{ result.barcode }}">
@@ -76,27 +67,12 @@
                 <input type="hidden" name="language" value="{{ result.language }}">
                 <input type="hidden" name="status" value="{{ result.status }}">
                 <button type="submit">Add</button>
-              </form>
+              </form> {% endcomment %}
             </td>
           </tr>
           {% endfor %}
         </tbody>
       </table>
-    {% comment %} <h2>Search Results:</h2>
-    <ul>
-        {% for result in results %}
-        {% comment %} {{result}} {% endcomment %}
-        {% comment %} <li>{{ result.release_id }} - {{ result.ext_score }} - {{ result.title }} {{ result.artist_name }} - {{ result.barcode }} {{result.release_group_id}} {{result.date}} {{result.format}}</li>
-        <form method="post" action="{% url 'add_artist' %}">
-            {% csrf_token %}
-            <input type="hidden" name="id" value="{{ result.release_id }}">
-            <input type="hidden" name="title" value="{{ result.title }}">
-            <input type="hidden" name="artist_name" value="{{ result.artist_name }}">
-            <input type="hidden" name="ext_score" value="{{ result.ext_score }}">
-            <button type="submit">Add</button>
-        </form>
-        {% endfor %}
-    </ul> {% endcomment %}
     {% endif %} 
 </div>
 {% endblock %}
