ADD collection as the base instead of release and make the views, urls and templates

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -22,10 +22,11 @@
         <ul class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0">
             {% if user.is_authenticated %}
                 <li><a href="/">Home</a></li>
-                <li><a href="{% url 'download-csv' %}">CSV</a></li>
-                <li><a href="{% url 'release-list' %}">Release List</a></li>
-                <li><a href="{% url 'artist-create' %}">Create Artist</a></li>
-                <li><a href="{% url 'release-create' %}">Create Releae</a></li>
+                {% comment %} <li><a href="{% url 'download-csv' %}">CSV</a></li> {% endcomment %}
+                {% comment %} <li><a href="{% url 'release-list' %}">Release List</a></li> {% endcomment %}
+                <li><a href="{% url 'collection-list' %}">My collection</a></li>
+                {% comment %} <li><a href="{% url 'artist-create' %}">Create Artist</a></li> {% endcomment %}
+                <li><a href="{% url 'release-create' %}">Add to Collection</a></li>
                 <li><a href="{% url 'barcode_scanner' %}">Barcode Scanner</a></li>
                 
                 {% comment %} <li><a href="{% url 'inbox' %}">Inbox</a></li>  {% endcomment %}
