--- a/templates/base.html
+++ b/templates/base.html
@@ -104,6 +104,10 @@
             margin: 0;
             min-height: 100%;
         }
+        th, td {
+            padding: 8px; /* Adjust the padding as needed */
+            text-align: left;
+        }
         p {
             margin-bottom: 1rem;
         }
