--- a/templates/a_collections/release_create.html
+++ b/templates/a_collections/release_create.html
@@ -3,102 +3,25 @@
 
 {% block content %}
 
+
 <div class="card !p-8">
     <h1>Search Album</h1>
-    <form method="get" action="{% url 'search_release' %}">
+    <form method="post" action="{% url 'search_release' %}">
+        {% csrf_token %}
         <label for="artist_name">Artist Name:</label>
-        <input type="text" name="artist_name" id="artist_name">
+        <input type="text" name="artist" id="artist_name">
         <br>
         <label for="album_name">Album Name:</label>
-        <input type="text" name="album_name" id="album_name">
+        <input type="text" name="album" id="album_name">
         <br>
         <br>
         <button type="submit">Search</button>
     </form>
 
-    {% if results %}
-    <table>
-        <thead>
-          <tr>
-            <th>Cover Art</th>
-            <th>Match</th>
-            <th>Name</th>
-            <th>Artist</th>
-            <th>Format</th>
-            <th>Tracks</th>
-            <th>Date</th>
-            <th>Label</th>
-            <th>Catalog#</th>
-            <th>Barcode</th>
-            <th>Lng</th>
-            <th>Release Type</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody>
+    <div id="results-container" class="card !p-8">
+      {% include 'a_collections/partials/musicbrainz_results_table.html' %}
+    </div>
 
-          {% for result in results %}
-          <tr>
-            <td>
-              {% comment %} {{result.cover_art_images}} {% endcomment %}
-              {% for image_info in result.cover_art_images %}
-                <img src="{{ image_info.image_small }}" alt="Cover Art" width="50" height="50">
-              {% endfor %}          
-            </td>
-            <td>{{ result.ext_score }}</td>
-            <td>{{ result.name }}</td>
-            <td>{{ result.artist }}</td>
-            <td>{{ result.format }}</td>
-            <td>{{ result.cd_tracks }} + {{ result.dvd_tracks }}</td>
-            <td>{{ result.date }}</td>
-            <td>{{ result.label }}</td>
-            <td>{{ result.catalog_number }}</td>
-            <td>{{ result.barcode }}</td>
-            <td>{{ result.language }}</td>
-            <td>{{ result.release_type }}</td>
-            <td>{{ result.status }}</td>
-            <td>
-              <form method="post" action="{% url 'add_artist' %}">
-                {% csrf_token %}
-                <input type="hidden" name="ext_score" value="{{ result.ext_score }}">
-                <input type="hidden" name="cover_art_images" value="{{ result.cover_art_images}}">
-                <input type="hidden" name="release_id" value="{{ result.release_id }}">
-                <input type="hidden" name="release_name" value="{{ result.name }}">
-                <input type="hidden" name="artist_id" value="{{ result.artist_id }}">
-                <input type="hidden" name="artist_name" value="{{ result.artist }}">
-                <input type="hidden" name="format" value="{{ result.format }}">
-                <input type="hidden" name="date" value="{{ result.date }}">
-                <input type="hidden" name="cd_tracks" value="{{ result.cd_tracks }}">
-                <input type="hidden" name="dvd_tracks" value="{{ result.dvd_tracks }}">
-                <input type="hidden" name="type" value="{{ result.release_type }}">
-                <input type="hidden" name="barcode" value="{{ result.barcode }}">
-                <input type="hidden" name="catalog_number" value="{{ result.catalog_number }}">
-                <input type="hidden" name="language" value="{{ result.language }}">
-                <input type="hidden" name="status" value="{{ result.status }}">
-                <input type="hidden" name="label" value="{{ result.label }}">
-                <input type="hidden" name="label_id" value="{{ result.label_id }}">
-                <button type="submit">Add</button>
-              </form>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    {% comment %} <h2>Search Results:</h2>
-    <ul>
-        {% for result in results %}
-        {% comment %} {{result}} {% endcomment %}
-        {% comment %} <li>{{ result.release_id }} - {{ result.ext_score }} - {{ result.title }} {{ result.artist_name }} - {{ result.barcode }} {{result.release_group_id}} {{result.date}} {{result.format}}</li>
-        <form method="post" action="{% url 'add_artist' %}">
-            {% csrf_token %}
-            <input type="hidden" name="id" value="{{ result.release_id }}">
-            <input type="hidden" name="title" value="{{ result.title }}">
-            <input type="hidden" name="artist_name" value="{{ result.artist_name }}">
-            <input type="hidden" name="ext_score" value="{{ result.ext_score }}">
-            <button type="submit">Add</button>
-        </form>
-        {% endfor %}
-    </ul> {% endcomment %}
-    {% endif %} 
+     
 </div>
 {% endblock %}
