--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -28,6 +28,8 @@
 
                 {% comment %} <li><a href="{% url 'artist-create' %}">Create Artist</a></li> {% endcomment %}
                 <li><a href="{% url 'release-create' %}">Add to Collection</a></li>
+                <li><a href="{% url 'artist_albums' %}">Artist Overview</a></li>
+                |
                 <li><a href="{% url 'barcode_scanner' %}">Barcode Scanner</a></li>
                 <li><a href="{% url 'shazam' %}">Shazam</a></li>
 
