ADD a hitdossier-onlie scraper and add artists to the datbase

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -30,6 +30,8 @@
                 <li><a href="{% url 'release-create' %}">Add to Collection</a></li>
                 <li><a href="{% url 'artist_albums' %}">Artist Overview</a></li>
                 |
+                <li><a href="{% url 'hitdossier-create' %}">Hitdossier</a></li>
+                |
                 <li><a href="{% url 'barcode_scanner' %}">Barcode Scanner</a></li>
                 <li><a href="{% url 'shazam' %}">Shazam</a></li>
 
